# assignment

./: .gitignore  README.md  ddl.sql  pyproject.toml
.github/: .gitmessage.txt
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_models.py  test_views.py
assignment/: settings.py  urls.py  views.py
ledgers/: models.py  serializers.py  urls.py  views.py
ledgers/migrations/: 0001_initial.py
ledgers/tests/: test_models.py  test_views.py
